2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs:
	* DBLane.cs:
	* Builder.cs:
	* DBWorkFile.cs:
	* FileManager.cs:
	* Configuration.cs:
	* DBRevisionWork.cs:
	* DBWorkFile.generated.cs:
	* DBLaneDependency.generated.cs: Add support for downloading
	  dependencies to a directory on the buildbot when the bot
	  starts working on a new revision.

2009-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Add support for BUILD_REPOSITORY_#.

	* DB.cs: Include revisionwork which is missing dependencies
	  too.

	* Updater.cs:
	* DBWorkFileView.cs:
	* DBRevisionWork.cs: Complete support for lane dependencies
	  matching exact revision.

2009-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBWork.cs: Add a ctor.

2009-04-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBLanefile.generated.cs: Add some simple change tracking to
	  steps.

2009-04-13  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Don't abort any threads. It just messes up
	  everything when it happens.

2009-04-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Calculate the timeout to abort the thread from
	  the timeout of each work item to execute.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Fix timeout message to not crash, and fix the
	  actual detection of the timeout too.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DB.cs: Speed up resetting a revision.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs: Remove any paths that were set for Builder.exe
	  to work before executing any commands.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* DBCommand.generated.cs: First attempt of implementing
	  deletion of a command from a lane.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Builder.cs:
	* DBCommand.generated.cs: Added support for per-command
	  timeout instead of having a 60-minute timeout for all
	  commands.

2009-03-31  Rolf Bjarne Kvinge  <RKvinge@novell.com>
