@@ -1,5 +1,10 @@
 2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* DBRevisionWork.cs: IsSuccess: Fix sql to behave like
+	  IsSuccessWithFile.
+
+2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* DB.cs:
 	* DBLane.cs:
 	* Builder.cs:
